feat(jobs): implementa módulo completo jobs